JumpScript/tests/baselines/reference/recursiveExportAssignmentAndFindAliasedType1.errors.txt
tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType1_moduleDef.d.jump(2,5): error TS2303: Circular definition of import alias 'self'.


==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType1_moduleA.jump (0 errors) ====
    /// <reference path="recursiveExportAssignmentAndFindAliasedType1_moduleDef.d.jump"/>
    import moduleC = require("moduleC");
    import ClassB = require("recursiveExportAssignmentAndFindAliasedType1_moduleB");
    export var b: ClassB; // This should result in type ClassB
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType1_moduleDef.d.jump (1 errors) ====
    declare module "moduleC" {
        import self = require("moduleC");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
        export = self;
    }
    
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType1_moduleB.jump (0 errors) ====
    class ClassB { }
    export = ClassB;
    